simple validation implementation